# NY-House-Price

./: .gitignore  README.md  app.py  final_draft.ipynb  ny_house_ensemble_compat.pkl  ny_house_studies.pkl  pyproject.toml  requirements.txt
mydata/: df_clean.csv  sample_input.csv
ny_house_price/: __init__.py  cli.py  data.py  features.py  models.py
