[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ny-house-price"
version = "0.1.0"
description = "A CLI package for NYC house price cleaning, training, and prediction."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Baron Okoko" }
]
license = { text = "MIT" }
keywords = ["nyc", "house price", "machine learning", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy==2.0.2",
  "pandas==2.3.3",
  "scikit-learn==1.6.1",
  "scipy==1.16.3",
  "joblib==1.5.3",
  "matplotlib==3.10.0",
  "seaborn==0.13.2",
  "catboost==1.2.10",
  "lightgbm==4.6.0",
  "xgboost==3.2.0",
  "optuna==4.8.0",
  "typer",
  "rich",
  "skimpy==0.0.20",
  "streamlit==1.41.1",
  "shap==0.46.0",
  "plotly==5.24.1",

  
]

[project.scripts]
ny-house-price = "ny_house_price.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ny_house_price*"]
